crates/ftui-core/tests/compile_fail/cooked_cannot_teardown.stderr
error[E0599]: no method named `teardown` found for struct `ftui_core::mode_typestate::TerminalMode<0>` in the current scope
 --> tests/compile_fail/cooked_cannot_teardown.rs:6:12
  |
6 |     cooked.teardown();
  |            ^^^^^^^^ method not found in `ftui_core::mode_typestate::TerminalMode<0>`
  |
  = note: the method was found for
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#10}::{constant#0}>`
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#11}::{constant#0}>`
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#7}::{constant#0}>`
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#8}::{constant#0}>`
          - `ftui_core::mode_typestate::TerminalMode<ftui_core::::mode_typestate::{impl#9}::{constant#0}>`
